--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "postcss": "^8.5.6",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
-    "vite": "^7.0.4",
-    "vite-plugin-vercel": "^9.0.7"
+    "vite": "^7.0.4"
   }
 }
