--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "outreachgenie",
+  "name": "weboro-site",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,13 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.53.0",
-    "axios": "^1.11.0",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "openai": "^5.19.1",
-    "stripe": "^18.5.0",
     "vue": "^3.5.17",
     "vue-i18n": "^11.1.12",
     "vue-router": "^4.5.1",
